## Process this file with automake to produce Makefile.in
SUBDIRS = src

EXTRA_DIST = autogen.sh

## https://stackoverflow.com/questions/5298830/how-to-include-m4-files-in-autoconf
ACLOCAL_AMFLAGS = -I m4

# ACLOCAL_AMFLAGS = -I /opt/local/share/aclocal
# ACLOCAL_AMFLAGS = -I m4 -I /usr/bin/aclocal
