AM_CFLAGS = -Wall -Wextra

bin_PROGRAMS = tiva_dfu_prog
tiva_dfu_prog_SOURCES = tiva-dfu-prog-linux.cpp \
	lmdfuprot.h \
    DFUProg.cpp \
	DFUProg.h \
	portable.h \
	dfu_load.cpp \
	dfu_load.h \
	dfu_util.cpp \
	dfu_util.h \
	dfu.cpp \
	dfu.h \
	usb_dfu.h \
	dfu_file.cpp \
	dfu_file.h \
	quirks.cpp \
	quirks.h \
	lmdfu.cpp \
	lmdfu.h \
	bin2dfuwrap.cpp \
	bin2dfuwrap.h
	